tests/standard_distribution/compile_fail/fields_with_skip_must_implement_derive.stderr
error[E0277]: the trait bound `MyNonDefaultStruct: Default` is not satisfied
 --> tests/standard_distribution/compile_fail/fields_with_skip_must_implement_derive.rs:6:10
  |
6 | #[derive(StandardDistribution)]
  |          ^^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `MyNonDefaultStruct`
  |
  = note: this error originates in the derive macro `StandardDistribution` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `MyNonDefaultStruct` with `#[derive(Default)]`
  |
4 + #[derive(Default)]
5 | pub struct MyNonDefaultStruct;
  |

error[E0277]: the trait bound `MyNonDefaultStruct: Default` is not satisfied
  --> tests/standard_distribution/compile_fail/fields_with_skip_must_implement_derive.rs:20:10
   |
20 | #[derive(StandardDistribution)]
   |          ^^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `MyNonDefaultStruct`
   |
   = note: this error originates in the derive macro `StandardDistribution` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `MyNonDefaultStruct` with `#[derive(Default)]`
   |
4  + #[derive(Default)]
5  | pub struct MyNonDefaultStruct;
   |
